# TCM-KGQA-RAG-AGENT-SYSTEM

./: .gitignore  AGENTS.md  README.md  启动流水线控制台.bat  启动评测后端8002.bat  启动评测后端集群.bat  启动问答系统.bat
backend/: .env.example  .env.template.runtime  SKILLS_SNAPSHOT.md  app.py  pyproject.toml  requirements.txt  start_retrieval_embed_console.bat  start_retrieval_embed_console_classics.bat
backend/api/: chat.py  chat_events.py  compress.py  files.py  graph_viz.py  qa.py  sessions.py  tokens.py
backend/docs/: TCM_SKILL_DESIGN_GUIDE.md
backend/eval/: batch2_llm_adjudication_latest.json  batch2_llm_adjudication_latest.md  doctoral_hard_probe_quick_deep_20260408_rerun_v2.baseline.json  doctoral_hard_probe_quick_deep_20260408_rerun_v2.baseline.md  doctoral_hard_probe_quick_deep_20260408_rerun_v2.json  doctoral_hard_probe_quick_deep_20260408_rerun_v2.md  doctoral_hard_probe_quick_deep_20260410_deep_quality_tuned.json  doctoral_hard_probe_quick_deep_20260410_deep_quality_tuned.md  graph_governance_audit_latest.json  graph_governance_phase3_runtime_20260413.md  graph_guardrail_prep_20260409.md  graph_regression_latest.json  herb_to_herb_dirty_subtypes_latest.json  herb_to_herb_dirty_subtypes_latest.md  herb_to_herb_patch_plan_latest.json  herb_to_herb_patch_plan_latest.md  nebula_path_profile_latest.json  ontology_boundary_tiers_latest.json  ontology_boundary_tiers_latest.md  ontology_likely_dirty_batch1_candidates_latest.json  ontology_likely_dirty_batch1_candidates_latest.md  ontology_likely_dirty_shortlist_latest.json  ontology_likely_dirty_shortlist_latest.md  origin_source_regression_20260409.md  path_query_backend_benchmark_latest.json  predicate_dispute_samples_latest.md  predicate_normalization_candidates_latest.json  predicate_normalization_candidates_latest.md  predicate_normalization_rules_final.md  predicate_normalization_rules_v3.md  (+2 more)
(+458 files in other folders)
