[project]
name = "mini-openclaw-backend"
version = "0.1.0"
description = "Backend for the integrated TCM agent workspace"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "html2text>=2024.2.26,<2027.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "tiktoken>=0.8.0,<1.0.0",
  "langchain>=1.0.0,<2.0.0",
  "langchain-openai>=1.0.0,<2.0.0",
  "langchain-deepseek>=1.0.0,<2.0.0",
  "llama-index-core>=0.12.0,<0.13.0",
  "llama-index-embeddings-openai>=0.3.0,<0.4.0",
  "jieba>=0.42.1,<1.0.0",
  "chromadb>=0.6.0,<0.7.0",
  "pymilvus>=2.5.0,<3.0.0",
  "nebula3-python>=3.8.2,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "ruff>=0.14.0,<1.0.0",
  "vulture>=2.14,<3.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 140
exclude = [
  ".venv",
  ".uv-cache",
  ".uv-cache-local",
  "_tmp_test",
  "_tmp_uv_cache",
  "storage",
  "workspace",
  "services/graph_service/data",
  "services/graph_service/logs",
  "services/retrieval_service/data",
  "eval/Results",
  "eval/TCM-PA",
  "eval/TCM-SDT",
  "eval/TCMBench",
]

[tool.ruff.lint.per-file-ignores]
"scripts/pipeline_server.py" = ["E402"]

[tool.vulture]
min_confidence = 80
paths = ["services", "scripts", "tools", "graph", "router"]
exclude = [
  ".venv/",
  ".uv-cache/",
  ".uv-cache-local/",
  "_tmp_test/",
  "_tmp_uv_cache/",
  "storage/",
  "workspace/",
  "services/graph_service/data/",
  "services/graph_service/logs/",
  "services/retrieval_service/data/",
  "eval/Results/",
  "eval/TCM-PA/",
  "eval/TCM-SDT/",
  "eval/TCMBench/",
]
